manifests/manifests/positioning/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: positioning
  namespace: plarail2021
spec:
  selector:
    matchLabels:
      app: positioning
  template:
    metadata:
      labels:
        app: positioning
    spec:
      containers:
        - name: positioning
          image: ghcr.io/ueckoken/plarail2022-positioning:cbec37a-1668760738 # {"$imagepolicy": "plarail2021:positioning"}
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
        - name: postgresql
          image: postgres:11.16
          imagePullPolicy: Always
