manifests/manifests/positioning/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: positioning
  namespace: plarail2021
spec:
  type: NodePort
  selector:
    app: positioning
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
