manifests/manifests/positioning/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: positioning
  namespace: plarail2021
spec:
  routes:
  - kind: Rule
    match: Host(`positioning.chofufes2022.ueckoken.club`)
    services:
    - name: positioning
      port: 80
  tls:
    secretName: cloudflare-cert
